--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "http-server": "^14.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
+    "react-resizable": "^3.0.5",
     "vitessce": "^3.4.14"
   },
   "devDependencies": {
