--- a/environment.yml
+++ b/environment.yml
@@ -2,58 +2,58 @@ name: cellXplore_App_env
 channels:
   - conda-forge
 dependencies:
-  - appnope=0.1.4=pyhd8ed1ab_0
-  - asttokens=2.4.1=pyhd8ed1ab_0
-  - bzip2=1.0.8=h99b78c6_7
-  - ca-certificates=2024.8.30=hf0a4a13_0
-  - comm=0.2.2=pyhd8ed1ab_0
-  - debugpy=1.8.7=py310hb4ad77e_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_0
-  - executing=2.1.0=pyhd8ed1ab_0
-  - importlib-metadata=8.5.0=pyha770c72_0
-  - ipykernel=6.29.5=pyh57ce528_0
-  - ipython=8.28.0=pyh707e725_0
-  - jedi=0.19.1=pyhd8ed1ab_0
-  - jupyter_client=8.6.3=pyhd8ed1ab_0
-  - jupyter_core=5.7.2=pyh31011fe_1
-  - krb5=1.21.3=h237132a_0
-  - libcxx=19.1.2=ha82da77_0
-  - libedit=3.1.20191231=hc8eb9b7_2
-  - libffi=3.4.2=h3422bc3_5
-  - libsodium=1.0.20=h99b78c6_0
-  - libsqlite=3.46.1=hc14010f_0
-  - libzlib=1.3.1=h8359307_2
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
-  - ncurses=6.5=h7bae524_1
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - openssl=3.3.2=h8359307_0
-  - packaging=24.1=pyhd8ed1ab_0
-  - parso=0.8.4=pyhd8ed1ab_0
-  - pexpect=4.9.0=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
-  - pip=24.2=pyh8b19718_1
-  - platformdirs=4.3.6=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.48=pyha770c72_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.3=pyhd8ed1ab_0
-  - pygments=2.18.0=pyhd8ed1ab_0
-  - python=3.10.15=hdce6c4c_2_cpython
-  - python_abi=3.10=5_cp310
-  - pyzmq=26.2.0=py310h82ef58e_3
-  - readline=8.2=h92ec313_1
-  - setuptools=75.1.0=pyhd8ed1ab_0
-  - six=1.16.0=pyh6c4a22f_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - tk=8.6.13=h5083fa2_1
-  - tornado=6.4.1=py310h493c2e1_1
-  - traitlets=5.14.3=pyhd8ed1ab_0
-  - typing_extensions=4.12.2=pyha770c72_0
-  - wcwidth=0.2.13=pyhd8ed1ab_0
-  - wheel=0.44.0=pyhd8ed1ab_0
-  - xz=5.2.6=h57fd34a_0
-  - zeromq=4.3.5=h9f5b81c_6
-  - zipp=3.20.2=pyhd8ed1ab_0
+  - appnope=0.1.4
+  - asttokens=2.4.1
+  - bzip2=1.0.8
+  - ca-certificates=2024.8.30
+  - comm=0.2.2
+  - debugpy=1.8.7
+  - decorator=5.1.1
+  - exceptiongroup=1.2.2
+  - executing=2.1.0
+  - importlib-metadata=8.5.0
+  - ipykernel=6.29.5
+  - ipython=8.28.0
+  - jedi=0.19.1
+  - jupyter_client=8.6.3
+  - jupyter_core=5.7.2
+  - krb5=1.21.3
+  - libcxx=19.1.2
+  - libedit=3.1.20191231
+  - libffi=3.4.2
+  - libsodium=1.0.20
+  - libsqlite=3.46.1
+  - libzlib=1.3.1
+  - matplotlib-inline=0.1.7
+  - ncurses=6.5
+  - nest-asyncio=1.6.0
+  - openssl=3.3.2
+  - packaging=24.1
+  - parso=0.8.4
+  - pexpect=4.9.0
+  - pickleshare=0.7.5
+  - pip=24.2
+  - platformdirs=4.3.6
+  - prompt-toolkit=3.0.48
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.3
+  - pygments=2.18.0
+  - python=3.10.15
+  - python_abi=3.10
+  - pyzmq=26.2.0
+  - readline=8.2
+  - setuptools=75.1.0
+  - six=1.16.0
+  - stack_data=0.6.2
+  - tk=8.6.13
+  - tornado=6.4.1
+  - traitlets=5.14.3
+  - typing_extensions=4.12.2
+  - wcwidth=0.2.13
+  - wheel=0.44.0
+  - xz=5.2.6
+  - zeromq=4.3.5
+  - zipp=3.20.2
   - pip:
       - aiobotocore==2.5.4
       - aiohappyeyeballs==2.4.3
@@ -92,6 +92,7 @@ dependencies:
       - distlib==0.3.9
       - distributed==2024.10.0
       - docrep==0.3.2
+      - esbuild-py==0.1.5
       - fasteners==0.19
       - fbpca==1.0
       - fcsparser==0.2.8
@@ -137,6 +138,7 @@ dependencies:
       - mdurl==0.1.2
       - mizani==0.13.1
       - more-itertools==10.5.0
+      - mpmath==1.3.0
       - msgpack==1.1.0
       - mudata==0.3.1
       - multidict==6.1.0
@@ -198,14 +200,16 @@ dependencies:
       - sniffio==1.3.1
       - sortedcontainers==2.4.0
       - spatial-image==1.1.0
-      - spatialdata==0.2.7.dev14+g13a25ae
-      - spatialdata-io==0.1.7.dev48+ge9b74c0
+      - spatialdata==0.3.0
+      - spatialdata-io==0.1.7
       - spatialdata-plot==0.2.8
       - squidpy==1.6.1
       - stack-data==0.6.3
       - starlette==0.41.0
       - statsmodels==0.14.4
       - stdlib-list==0.11.0
+      - sympy==1.13.1
+      - tangram-sc==1.0.4
       - tblib==3.0.0
       - tenacity==9.0.0
       - texttable==1.7.0
@@ -213,6 +217,7 @@ dependencies:
       - tifffile==2024.9.20
       - tomli==2.0.2
       - toolz==1.0.0
+      - torch==2.5.1
       - tqdm==4.66.5
       - typeguard==4.3.0
       - tzdata==2024.2
