--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,26 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node --max-old-space-size=16384 /home/olympia/cellXplore_App/frontend/node_modules/vite/bin/vite.js build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "5.15.14",
+    "@mui/styled-engine": "6.4.0",
+    "@mui/system": "5.15.14",
+    "@mui/x-data-grid": "7.24.0",
+    "circos": "^2.1.0",
     "http-server": "^14.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
+    "react-plotly.js": "^2.6.0",
     "react-resizable": "^3.0.5",
-    "vitessce": "^3.4.14"
+    "react-select": "^5.10.1",
+    "react-tabs": "6.1.0",
+    "@vitessce/dev": "^3.5.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -27,6 +36,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
-    "vite": "^5.4.9"
+    "vite": "^5.4.14"
   }
 }
