--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,10 @@
     "@mui/styled-engine": "6.4.0",
     "@mui/system": "5.15.14",
     "@mui/x-data-grid": "7.24.0",
+    "@vitessce/dev": "^3.5.11",
     "circos": "^2.1.0",
+    "d3": "^7.9.0",
+    "html2canvas": "^1.4.1",
     "http-server": "^14.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -23,8 +26,7 @@
     "react-plotly.js": "^2.6.0",
     "react-resizable": "^3.0.5",
     "react-select": "^5.10.1",
-    "react-tabs": "6.1.0",
-    "@vitessce/dev": "^3.5.11"
+    "react-tabs": "6.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
