--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,10 @@
     "@vitessce/dev": "^3.5.11",
     "circos": "^2.1.0",
     "d3": "^7.9.0",
+    "d3-sankey": "^0.12.3",
     "html2canvas": "^1.4.1",
     "http-server": "^14.1.1",
+    "jspdf": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
