main server implementation with local dev changes

--- a/configs/Breast_Cancer.json
+++ b/configs/Breast_Cancer.json
@@ -9,7 +9,7 @@
             "files": [
                 {
                     "fileType": "anndata.zarr",
-                    "url": "http://127.0.0.1:5000/datasets/sc_FPPE_breast_cancer.zarr",
+                    "url": "http://oh-cxg-dev.mvls.gla.ac.uk/datasets/sc_FPPE_breast_cancer.zarr",
                     "options": {
                         "obsEmbedding": [
                             {
@@ -48,7 +48,7 @@
             "files": [
                 {
                     "fileType": "spatialdata.zarr",
-                    "url": "http://127.0.0.1:5000/datasets/Xenium_proper_data.zarr",
+                    "url": "http://oh-cxg-dev.mvls.gla.ac.uk/datasets/Xenium_proper_data.zarr",
                     "options": {
                         "obsFeatureMatrix": {
                             "path": "tables/table/X"
